svc-pod1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: deploy1-websrv
spec:
 replicas: 1
 selector:
   matchLabels:
     app: websrv
 template:
   metadata:
     labels:
       app: websrv
   spec:
     containers:
     - name: pod-web
       image: nginx
---
apiVersion: v1
kind: Service
metadata:
 name: svc1-web
spec:
 ports:
   - name: web-port
     port: 9001
     targetPort: 80
 selector:
   app: websrv
 type: ClusterIP
