svc-pod2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: deploy2-guestsrv
spec:
 replicas: 2
 selector:
   matchLabels:
     app: guestsrv
 template:
   metadata:
     labels:
       app: guestsrv
   spec:
     containers:
     - name: pod-guest
       image: gcr.io/google-samples/kubernetes-bootcamp:v1
       ports:
       - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
 name: svc2-guest
spec:
 ports:
   - name: guest-port
     port: 9002
     targetPort: 8080
 selector:
   app: guestsrv
 type: NodePort
